--- a/process-trade/pom.xml
+++ b/process-trade/pom.xml
@@ -21,14 +21,24 @@
 	    <version>1.11.160</version>
 	    <!-- <scope>provided</scope> -->
 	</dependency>    
+	<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-sns -->
+	<dependency>
+	    <groupId>com.amazonaws</groupId>
+	    <artifactId>aws-java-sdk-sns</artifactId>
+	    <version>1.11.160</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-lambda-java-events -->
+	<dependency>
+	    <groupId>com.amazonaws</groupId>
+	    <artifactId>aws-lambda-java-events</artifactId>
+	    <version>1.3.0</version>
+	</dependency>	
 	<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 	<dependency>
 	    <groupId>com.google.code.gson</groupId>
 	    <artifactId>gson</artifactId>
 	    <version>2.8.1</version>
 	</dependency>
-
-	
   </dependencies>
 
   <build>
