--- a/license-plates/pom.xml
+++ b/license-plates/pom.xml
@@ -14,18 +14,19 @@
   
   <dependencies>
   	<!-- AWS specific dependencies -->
-    <dependency>
+    <!-- <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk</artifactId>
       <version>1.11.152</version>
-      <scope>compile</scope>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>amazon-kinesis-client</artifactId>
       <version>1.2.1</version>
-      <scope>compile</scope>
+      <scope>provided</scope>
     </dependency>
+     -->
     <!-- End of AWS specific dependencies -->
   
     <dependency>
